add button to create todos

--- a/vanilla/src/index.html
+++ b/vanilla/src/index.html
@@ -6,9 +6,12 @@
   <body>
     <section id="app">
       <h2>My Todo list</h2>
+      <span class="addTodo">
+        <input type="text" placeholder="create a new todo..." />
+        <button>Add</button>
+      </span>
       <ul class="list"></ul>
     </section>
-    <script type="text/javascript" src="js/Todo.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
