creating todos by instantiating Todo class instead of JSON

--- a/vanilla/src/index.html
+++ b/vanilla/src/index.html
@@ -12,6 +12,7 @@
       </span>
       <ul class="list"></ul>
     </section>
+    <script type="text/javascript" src="js/Todo.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
