refacto BEM style

--- a/vanilla/src/index.html
+++ b/vanilla/src/index.html
@@ -6,11 +6,11 @@
   <body>
     <section id="app">
       <h2>My Todo list</h2>
-      <span class="addTodo">
-        <input type="text" placeholder="create a new todo..." />
-        <button>Add</button>
+      <span class="todo__add">
+        <input class="todo__add-input" type="text" placeholder="create a new todo..." />
+        <button class="todo__add-button">Add</button>
       </span>
-      <ul class="list"></ul>
+      <ul class="todo__list"></ul>
     </section>
     <script type="text/javascript" src="js/Todo.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
